syntax = "proto3";

package com.findmyclub.Grpc;

import "google/protobuf/any.proto";

message ClubProto {
  int32 id = 1;
  string name = 2;
  string location = 3;
  repeated string category = 4;
  string description = 5;
}
message ClubListProto {
  repeated ClubProto clubs = 1;
}

service FindMyClubProtoService {
  rpc SendRequest (RequestProto) returns (ResponseProto);
}

enum HandlerTypeProto {
  HANDLER_UNKNOWN = 0;
  HANDLER_CLUB = 1;
}

enum ActionTypeProto {
  ACTION_UNKNOWN = 0;
  ACTION_CREATE = 1;
  ACTION_GET = 2;
  ACTION_UPDATE = 3;
  ACTION_DELETE = 4;
  ACTION_LIST = 5;
}
enum StatusTypeProto {
  STATUS_UNKNOWN = 0;
  STATUS_OK = 1;
  STATUS_ERROR = 2;
  STATUS_INVALID_PAYLOAD = 3;
}
message RequestProto {
  HandlerTypeProto handler = 1;
  ActionTypeProto action = 2;
  google.protobuf.Any payload = 3;
}

message ResponseProto {
  StatusTypeProto status = 1;
  google.protobuf.Any payload = 2;
}

